# compare-the-munro-dotcom

./: .coverage  .gitignore  .template.env  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: calcs.py  main.py  plots.py
app/.streamlit/: secrets.toml
app/data/: READ.md  all_munro_pages_data.csv  all_routes_add_features.csv
compare_the_munro_dotcom/: calcs.py  utils.py
data/: all_routes_add_features.csv
scripts/: all_route_pages_data.csv  data_exploration.py  data_scraping.py  munro_urls.txt
