[project]
name = "compare-the-munro-dotcom"
version = "1.0.0"
description = "Web app to explore the munros"
authors = [
  {name = "Lewis Harvey", email = "123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies=[
    "pandas>=2.2.2,<3.0.0",
    "streamlit >=1.36.0, <2.0.0",
    "streamlit-geolocation >= 0.0.10, < 1.0.0",
    "googlemaps >=4.10.0, <5.0.0",
    "plotly >=5.23.0, <6.0.0",
]


[tool.uv]
dev-dependencies = [
    "poethepoet",
    "ruff",
    "mypy",
    "pytest",
    "coverage",
    "python-dotenv",
    "jupyterlab",
    "jupytext",
    "beautifulsoup4",
    "selenium",
    "tqdm",
    "pyenchant",
    "langdetect",
    "matplotlib",
]

[tool.ruff]
line-length = 120
target-version = "py311"
show-fixes = true
exclude = [
    ".venv",
    "__ignore__",
    "notebooks",
    "scripts"
]

[tool.ruff.lint]
select = [# see https://beta.ruff.rs/docs/rules/
    "A", "E", "F", "UP", "I", "W", "SIM", "RUF", "C901"
]
ignore = [
    "A002", # Argument `id` is shadowing a Python builtin
    "A003", # Class attribute `...` is shadowing a Python builtin
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests|notebooks|__ignore__|.ipynb_checkpoints|scripts"


[tool.coverage.run]
include = [
    "app/*",
]

[tool.poe.tasks]
[tool.poe.tasks.lint]
help = "Lint"
sequence = [
    { cmd = "uv run ruff format ." },
    { cmd = "uv run ruff check . --fix" },
    { cmd = "uv run python -m mypy ." },
]

[tool.poe.tasks.test]
help = "Runs all tests"
sequence = [
    { cmd = "uv run coverage run -m pytest ./tests" },
    { cmd = "uv run coverage report -m" },
]

[tool.poe.tasks.all]
help = "Run all required pre-push commands"
sequence = [{ ref = "lint" }, { ref = "test" }, { shell = "echo \"\nAll Good! :)\"" }]

[tool.poe.tasks.jupy]
help = "Run jupyter lab"
sequence = [{ cmd = "uv run python -m jupyterlab" }]

[tool.poe.tasks.export]
help = "Generate requirements.txt"
sequence = [{ cmd = "uv pip compile pyproject.toml -o requirements.txt" }]
